Code tidy